--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- 
-    - primary meta tags
-  -->
   <title>Product detail page</title>
-
-  <!-- 
-    - favicon
-  -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
   <!-- 
     - custom css link
@@ -28,10 +19,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <!-- 
-    - preload images
-  -->
-
 </head>
 
 <body>
@@ -40,7 +27,7 @@
     - #HEADER
   -->
 
-  <header class="header" data-header>
+  <header class="header">
     <div class="container">
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -48,10 +35,11 @@
       </button>
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" width="77" height="20" alt="logo">
+        <img src="./assets/images/logo.svg" width="77" height="20" alt="Nike home">
       </a>
 
       <nav class="navbar" data-navbar>
+
         <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
           <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
         </button>
@@ -59,36 +47,37 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Collection</a>
+            <a href="#" class="navbar-link">Collection</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Men</a>
+            <a href="#" class="navbar-link">Men</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Women</a>
+            <a href="#" class="navbar-link">Women</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>About</a>
+            <a href="#" class="navbar-link">About</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Contact</a>
+            <a href="#" class="navbar-link">Contact</a>
           </li>
 
         </ul>
+
       </nav>
 
       <div class="header-action">
 
-        <button class="header-action-btn">
+        <button class="header-action-btn" aria-label="add to cart">
           <ion-icon name="bag-handle-outline" aria-hidden="true"></ion-icon>
         </button>
 
         <button class="profile-btn" aria-label="profile">
-          <img src="./assets/images/profile.png" width="100" height="100" loading="lazy" alt="profile" class="img">
+          <img src="./assets/images/profile.png" width="100" height="100" alt="profile" class="img">
         </button>
 
       </div>
@@ -116,29 +105,34 @@
 
             <div class="slider-banner" data-slider>
               <figure class="product-banner">
-                <img src="./assets/images/product-1.png" width="600" height="600" alt="Nike Sneaker" class="img-cover">
+                <img src="./assets/images/product-1.png" width="600" height="600" loading="lazy" alt="Nike Sneaker"
+                  class="img-cover">
               </figure>
 
               <figure class="product-banner">
-                <img src="./assets/images/product-2.png" width="600" height="600" alt="Nike Sneaker" class="img-cover">
+                <img src="./assets/images/product-2.png" width="600" height="600" loading="lazy" alt="Nike Sneaker"
+                  class="img-cover">
               </figure>
 
               <figure class="product-banner">
-                <img src="./assets/images/product-3.png" width="600" height="600" alt="Nike Sneaker" class="img-cover">
+                <img src="./assets/images/product-3.png" width="600" height="600" loading="lazy" alt="Nike Sneaker"
+                  class="img-cover">
               </figure>
 
               <figure class="product-banner">
-                <img src="./assets/images/product-4.png" width="600" height="600" alt="Nike Sneaker" class="img-cover">
+                <img src="./assets/images/product-4.png" width="600" height="600" loading="lazy" alt="Nike Sneaker"
+                  class="img-cover">
               </figure>
             </div>
 
-            <button class="slide-btn prev" aria-label="Next image" data-prev>
+            <button class="slide-btn prev" aria-label="Previous image" data-prev>
               <ion-icon name="chevron-back" aria-hidden="true"></ion-icon>
             </button>
 
-            <button class="slide-btn next" aria-label="Previous image" data-next>
+            <button class="slide-btn next" aria-label="Next image" data-next>
               <ion-icon name="chevron-forward" aria-hidden="true"></ion-icon>
             </button>
+
           </div>
 
           <div class="product-content">
@@ -170,7 +164,7 @@
                   <ion-icon name="remove-outline"></ion-icon>
                 </button>
 
-                <span data-qty>1</span>
+                <span class="span" data-qty>1</span>
 
                 <button class="counter-btn" data-qty-plus>
                   <ion-icon name="add-outline"></ion-icon>
